# vise

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
.github/: CODEOWNERS  pull_request_template.md
.github/release-please/: config.json
.github/workflows/: cargo-license.yaml  publish-crates.yaml  release.yaml  rust.yml  secrets_scanner.yaml  secrets_scanner.yml
crates/vise/: Cargo.toml  README.md
crates/vise-exporter/: Cargo.toml  README.md
crates/vise-exporter/src/: lib.rs  metrics.rs
crates/vise-exporter/src/exporter/: mod.rs  tests.rs
crates/vise-macros/: Cargo.toml  README.md
crates/vise-macros/src/: labels.rs  lib.rs  metrics.rs  register.rs  utils.rs
crates/vise-macros/tests/: version_match.rs
crates/vise/src/: buckets.rs  builder.rs  collector.rs  constructor.rs  descriptors.rs  encoding.rs  format.rs  lib.rs  metrics.rs  registry.rs  tests.rs  traits.rs  validation.rs  wrappers.rs
crates/vise/tests/: integration.rs
crates/vise/tests/ui/labels/: bogus_field_type.rs  bogus_field_type.stderr  bogus_label_name_in_attr.rs  bogus_label_name_in_attr.stderr  bogus_label_name_in_field.rs  bogus_label_name_in_field.stderr  bogus_label_name_in_metrics_attr.rs  bogus_label_name_in_metrics_attr.stderr  duplicate_label_value.rs  duplicate_label_value.stderr  non_ascii_label_value.rs  non_ascii_label_value.stderr  rename_all_with_complex_fields.rs  rename_all_with_complex_fields.stderr  rename_and_format_clash.rs  rename_and_format_clash.stderr  unimplemented_format.rs  unimplemented_format.stderr  unsupported_attribute.rs  unsupported_attribute.stderr  unsupported_container.rs  unsupported_container.stderr  unsupported_generics.rs  unsupported_generics.stderr  unsupported_generics_for_set.rs  unsupported_generics_for_set.stderr  unsupported_rename_rule.rs  unsupported_rename_rule.stderr  unsupported_variant_attr.rs  unsupported_variant_attr.stderr
crates/vise/tests/ui/metrics/: bogus_buckets.rs  bogus_buckets.stderr  bogus_field.rs  bogus_field.stderr  bogus_metric_name.rs  bogus_metric_name.stderr  bogus_prefix.rs  bogus_prefix.stderr  bogus_unit.rs  bogus_unit.stderr  missing_buckets.rs  missing_buckets.stderr  non_monotonic_buckets.rs  non_monotonic_buckets.stderr  unnecessary_buckets.rs  unnecessary_buckets.stderr  unsupported_attribute.rs  unsupported_attribute.stderr  unsupported_field_attr.rs  unsupported_field_attr.stderr  unsupported_generics.rs  unsupported_generics.stderr  unsupported_item.rs  unsupported_item.stderr
e2e-tests/: Cargo.toml  README.md
e2e-tests/src/: main.rs
e2e-tests/tests/: integration.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
search.desc/vise/: vise-desc-0-.js
search.desc/vise_exporter/: vise_exporter-desc-0-.js
search.desc/vise_macros/: vise_macros-desc-0-.js
src/vise/: buckets.rs.html  builder.rs.html  collector.rs.html  descriptors.rs.html  encoding.rs.html  format.rs.html  lib.rs.html  metrics.rs.html  registry.rs.html  traits.rs.html  validation.rs.html  wrappers.rs.html
src/vise_exporter/: lib.rs.html  metrics.rs.html
src/vise_macros/: labels.rs.html  lib.rs.html  metrics.rs.html  register.rs.html  utils.rs.html
type.impl/vise/: struct.Family.js
vise/: all.html  attr.register.html  derive.EncodeLabelSet.html  derive.EncodeLabelValue.html  derive.Metrics.html  enum.Format.html  enum.Unit.html  index.html  sidebar-items.js  struct.BeforeScrapeError.html  struct.Buckets.html  struct.Collector.html  struct.Counter.html  struct.DurationAsSecs.html  struct.Family.html  struct.Gauge.html  struct.GaugeGuard.html  struct.Global.html  struct.Histogram.html  struct.Info.html  struct.LatencyObserver.html  struct.LazyItem.html  struct.MetricBuilder.html  struct.MetricsCollection.html  struct.MetricsFamily.html  struct.MetricsVisitor.html  struct.RegisteredDescriptors.html  struct.Registry.html  struct.SetInfoError.html  trait.BuildMetric.html  trait.CollectToRegistry.html  trait.Metrics.html  trait.MetricsVisitor.html  type.LabeledFamily.html
vise/buckets/: struct.Buckets.html
vise/builder/: struct.MetricBuilder.html  trait.BuildMetric.html
vise/collector/: struct.BeforeScrapeError.html  struct.Collector.html
vise/descriptors/: index.html  sidebar-items.js  struct.FullMetricDescriptor.html  struct.MetricDescriptor.html  struct.MetricGroupDescriptor.html
vise/format/: enum.Format.html
vise/metrics/: struct.Global.html  struct.MetricsFamily.html  trait.Metrics.html
vise/registry/: struct.MetricsCollection.html  struct.MetricsVisitor.html  struct.RegisteredDescriptors.html  struct.Registry.html  trait.CollectToRegistry.html  trait.MetricsVisitor.html
vise/traits/: enum.EncodedGaugeValue.html  index.html  sidebar-items.js  struct.AtomicIsizeWrapper.html  struct.AtomicU64Wrapper.html  struct.AtomicUsizeWrapper.html  struct.LabelRef.html  struct.StaticLabelSet.html  trait.EncodeLabelSet.html  trait.GaugeValue.html  trait.HistogramValue.html  trait.MapLabels.html
vise/wrappers/: struct.DurationAsSecs.html  struct.Family.html  struct.Gauge.html  struct.GaugeGuard.html  struct.Histogram.html  struct.Info.html  struct.LatencyObserver.html  struct.LazyItem.html  struct.SetInfoError.html  type.LabeledFamily.html
vise_exporter/: all.html  index.html  sidebar-items.js  struct.MetricsExporter.html  struct.MetricsServer.html
vise_exporter/exporter/: struct.MetricsExporter.html  struct.MetricsServer.html
vise_macros/: all.html  attr.register.html  derive.EncodeLabelSet.html  derive.EncodeLabelValue.html  derive.Metrics.html  index.html  sidebar-items.js
(+41 files in other folders)
