[workspace]
members = [
  "crates/vise",
  "crates/vise-exporter",
  "crates/vise-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
repository = "https://github.com/matter-labs/vise"
license = "MIT OR Apache-2.0"
keywords = ["metrics", "monitoring", "openmetrics", "prometheus"]
categories = ["development-tools"]

[workspace.dependencies]
assert_matches = "1.5.0"
derive_more = "0.99.17"
doc-comment = "0.3.3"
elsa = "1.9.0"
hyper = { version = "0.14", features = ["client", "server"] }
linkme = "0.3.15"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
once_cell = "1.17"
proc-macro2 = "1.0.7"
prometheus-client = "0.21.2"
quote = "1"
rand = "0.8"
syn = { version = "2.0", features = ["full"] }
tokio = "1"
tracing = "0.1.37"
