[workspace]
members = [
  "crates/vise",
  "crates/vise-exporter",
  "crates/vise-macros",
  "e2e-tests",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.79.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
repository = "https://github.com/matter-labs/vise"
license = "MIT OR Apache-2.0"
keywords = ["metrics", "monitoring", "openmetrics", "prometheus"]
categories = ["development-tools"]

[workspace.dependencies]
anyhow = "1.0"
assert_matches = "1.5.0"
compile-fmt = "0.1.0"
derive_more = "2.0.1"
doc-comment = "0.3.3"
elsa = "1.9.0"
http-body-util = "0.1.2"
hyper = { version = "1.5", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
ctor = "0.2.8"
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", default-features = false }
once_cell = "1.17"
proc-macro2 = "1.0.7"
prometheus-client = "0.23.1"
prometheus-http-query = "0.8.2"
quote = "1"
rand = "0.8"
syn = { version = "2.0", features = ["full"] }
tempfile = "3.8.0"
tokio = "1"
tracing = "0.1.37"
tracing-capture = "0.1.0"
tracing-subscriber = "0.3.17"
trybuild = "1.0.85"
version-sync = "0.9.5"
