[package]
name = "vise-e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
vise = { path = "../crates/vise" }
vise-exporter = { path = "../crates/vise-exporter" }

rand.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "signal"] }

[dev-dependencies]
anyhow.workspace = true
assert_matches.workspace = true
prometheus-http-query.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
