[package]
name = "vise"
description = "Typesafe metrics client"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise-macros = { version = "=0.2.0", path = "../vise-macros" }

compile-fmt.workspace = true
elsa.workspace = true
ctor.workspace = true
once_cell.workspace = true
prometheus-client.workspace = true

[dev-dependencies]
assert_matches.workspace = true
derive_more = { workspace = true, features = ["display"] }
doc-comment.workspace = true
rand.workspace = true
trybuild.workspace = true
version-sync.workspace = true
